--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -972,3 +972,22 @@
 	year = "2000",
 	ISBN= "80-246-0063-3"
 }
+
+@Book{anton,
+      author       = "Anton, H.",
+      title        = "Elementary linear algebra; 9th ed.",
+      publisher    = "Wiley",
+      address      = "New York, NY",
+      year         = "2005",
+	  ISBN="0-471-66960-1"
+}
+
+@Book{barnett,
+      author       = "Barnett, S.",
+      title        = "Matrices: methods and applications",
+      publisher    = "Clarendon Press",
+      address      = "Oxford",
+      series       = "Oxford applied mathematics and computing science series",
+      year         = "1990",
+	  ISBN="0-19-859680-4"
+}
