a number of pictures updated
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@4634 4525493e-7705-40b1-a816-d608a930855b

--- a/2010/thesis/first_el_measurement.tex
+++ b/2010/thesis/first_el_measurement.tex
@@ -4,14 +4,14 @@ DPE, SD, MC
 
 \chapter[felm]{The first elastic scattering measurement at the LHC}
 
-\> attach the paper \bref{totem11}
+\> reference to the paper \bref{totem11}
 \> comment on what I have done (mostly with Simone)
 
 \> review the conventions
 \>> 45 = left, 56 = right
 \>> the 2 diagonals
 
-\> review the reconstruction steps
+\> outline of the paper
 
 \section{Alignment}
 
