--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -47,6 +47,19 @@
       year           = "2008",
 }
 
+@Article{totem11,
+      collaboration  = "TOTEM",
+	author = "Antchev, G. et al.",
+	journal = "EPL",
+	year = "2011",
+	volume = "95",
+	number = "4",
+	pages = "41001",
+	title = "Proton-proton elastic scattering at the LHC energy of $\sqrt s = 7\,\rm TeV$",
+	DOI= "10.1209/0295-5075/95/41001",
+	url= "http://dx.doi.org/10.1209/0295-5075/95/41001",
+}
+
 @Article{hubert,
       author         = "H. Niewiadomski",
       title          = "Reconstruction of protons in the TOTEM roman pot
